chore: ignore bin/ artifacts and configure CORS via environment variable
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>